# cpp-waste-recycling-martonMeszaros

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Dustbin.cpp  Dustbin.h  DustbinContentError.hpp  Garbage.hpp  PaperGarbage.hpp  PlasticGarbage.hpp
